fix icon alignment on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -45,6 +45,12 @@ body {
     a {
       margin-right: 20px;
     }
+
+    a:last-of-type {
+      @include breakpoint(xs-sm) {
+        margin-right: 0;
+      }
+    }
   }
 
   h2 {
